# xtimeseries

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  fundamentals_of_eva.html  fundamentals_of_eva.ipynb  generate_figures.py  index.rst  installation.rst  quickstart.rst
docs/_static/: custom.css
docs/api/: index.rst
docs/examples/: atlantic_city_sealevel.rst  model_comparison.rst  newbrunswick_precipitation.rst  precipitation_idf.rst  temperature_extremes.rst  trend_analysis.rst
docs/theory/: extreme_value_theory.rst  gev_distribution.rst  gpd_distribution.rst  nonstationary_eva.rst  return_periods.rst
examples/: README.rst  atlantic_city_sealevel.py  basic_usage.py  model_comparison.py  newbrunswick_precipitation.py  nonstationary_trends.py  temperature_analysis.py
scripts/: create_synthetic_data.py  fetch_cmip6_data.py  fetch_noaa_data.py  fetch_noaa_tides.py
src/xtimeseries/: __init__.py  _xarray.py  block_maxima.py  confidence.py  diagnostics.py  distributions.py  nonstationary.py  pot.py  return_periods.py  synthetic.py
tests/: conftest.py  test_block_maxima.py  test_cftime.py  test_confidence.py  test_distributions.py  test_nonstationary.py  test_pot.py  test_return_periods.py  test_synthetic.py  test_xarray.py
tests/data/: README.md  cmip6_cesm2_pr.nc  cmip6_gfdl-cm4_pr.nc  noaa_atlantic_city_daily.csv  noaa_new_brunswick.csv
