[project]
name = "xtimeseries"
version = "0.1.0"
description = "Extreme value analysis toolkit for climate data"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "John Krasting", email = "krasting@gmail.com"}]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "xarray>=2024.1",
    "cftime>=1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
]
docs = [
    "sphinx>=7.2",
    "sphinx-rtd-theme>=2.0",
    "numpydoc>=1.6",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-gallery>=0.15",
    "matplotlib>=3.8",
    "pillow>=10.0",
]
data = [
    "requests>=2.31",
    "gcsfs>=2024.1",
    "intake-esm>=2024.1",
    "zarr>=2.16",
]
all = ["xtimeseries[dev,docs,data]"]

[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
